# tags-by-review-nlp

./: .env  .env.dvc  .gitignore  .pre-commit-config.yaml  config.yaml  creds.dvc  data.dvc  dvc.yaml  makefile  pyproject.toml  readme.md  tables.dvc  tags_model.ipynb
.dvc/: config
data/initial_data/: .gitignore
data/intermediate_data/: .gitignore
data/prepared_data/: .gitignore
models/: __init__.py  mT5_multilingual_XLSum.py  models_config.py  weights.dvc  xlm_roberta_large_qa_multilingual_finedtuned_ru.py
models/roberta/: .gitignore
notebooks/: tags_model.ipynb
scripts/: select_tags.sql
sql/: select_comments.sql  select_tags.sql
src/data/: download_data.py  get_final_df.py  get_tags.py  prepare_data.py
src/models/: __init__.py  roberta.py  xlm_roberta_large_qa_multilingual_finedtuned_ru.py
tables/: tags_by_place.xlsx
utils/: data_utils.py
