[tool.poetry]
name = "tags-by-review-nlp"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tags_by_review_nlp"}]

[tool.poetry.dependencies]
python = "~3.10"


[tool.poetry.group.data.dependencies]
sqlalchemy = "^1.4"
pandas = "^2.1.1"


[tool.poetry.group.liners.dependencies]


[tool.poetry.group.linters.dependencies]
black = "23.9.1"
isort = "5.12.0"
autopep8 = "2.0.4"
add-trailing-comma = "3.1.0"
pre-commit = "3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
